1. Добавлена функция загрузки постов канала tg_channel_posts() 2. В зависимости пакета добавлен пакет purrr 3. В справку по функциям добавлено описание, и ссылка на используемый функцией метод API

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,12 @@ S3method(tg_parse_response,default)
 S3method(tg_parse_response,to_list)
 export(tg_auth)
 export(tg_channel)
+export(tg_channel_posts)
 export(tg_channel_stat)
 export(tg_channel_subscribers)
 export(tg_get_token)
-export(tg_parse_response)
 import(cli)
 import(httr2)
 import(stringr)
 import(tidyr)
+importFrom(purrr,map_dfr)
