--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,9 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Imports: 
     cli,
+    dplyr,
     httr2,
     purrr,
+    snakecase,
     stringr,
     tidyr
