--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,12 +4,15 @@ S3method(tg_parse_response,default)
 S3method(tg_parse_response,to_list)
 export(tg_auth)
 export(tg_channel)
+export(tg_channel_mentions)
 export(tg_channel_posts)
 export(tg_channel_stat)
 export(tg_channel_subscribers)
 export(tg_get_token)
 import(cli)
+import(dplyr)
 import(httr2)
 import(stringr)
 import(tidyr)
 importFrom(purrr,map_dfr)
+importFrom(snakecase,to_snake_case)
