--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,14 @@ S3method(tg_parse_response,default)
 S3method(tg_parse_response,to_list)
 export(tg_auth)
 export(tg_channel)
+export(tg_channel_forwards)
 export(tg_channel_mentions)
 export(tg_channel_posts)
 export(tg_channel_stat)
 export(tg_channel_subscribers)
+export(tg_get_channel_id)
 export(tg_get_token)
+export(tg_set_channel_id)
 import(cli)
 import(dplyr)
 import(httr2)
