Добавил функцию tg_channel_views()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(tg_channel_mentions)
 export(tg_channel_posts)
 export(tg_channel_stat)
 export(tg_channel_subscribers)
+export(tg_channel_views)
 export(tg_get_channel_id)
 export(tg_get_token)
 export(tg_set_channel_id)
