--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(tg_channel_subscribers)
 export(tg_channel_views)
 export(tg_get_channel_id)
 export(tg_get_token)
+export(tg_post)
 export(tg_set_channel_id)
 import(cli)
 import(dplyr)
