--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(tg_parse_response,default)
 S3method(tg_parse_response,to_list)
 export(tg_auth)
+export(tg_categories)
 export(tg_channel)
 export(tg_channel_forwards)
 export(tg_channel_mentions)
@@ -10,10 +11,13 @@ export(tg_channel_posts)
 export(tg_channel_stat)
 export(tg_channel_subscribers)
 export(tg_channel_views)
+export(tg_countries)
 export(tg_get_channel_id)
 export(tg_get_token)
+export(tg_languages)
 export(tg_post)
 export(tg_post_stat)
+export(tg_posts_search)
 export(tg_set_channel_id)
 import(cli)
 import(dplyr)
