1. Добавлена функция tg_mentions_by_period() 2. Добавлена функция tg_mentions_by_channels()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,8 @@ export(tg_countries)
 export(tg_get_channel_id)
 export(tg_get_token)
 export(tg_languages)
+export(tg_mentions_by_channels)
+export(tg_mentions_by_period)
 export(tg_post)
 export(tg_post_stat)
 export(tg_posts_search)
