1. Добавлена опция tg.api_quote_alert_rate, которая позволяет установить порог для вызова предупреждений о том, что квота API почти израсходована. 2. Под все функции добавлены сеттеры. 3. Переписан метод печати квот API. 4. Приведены в порядок зависимости пакета, теперь из dplyr, tidyr и stringr импортируются только используемые функции. 5. В зависимости purrr добавлена функции walk и pwalk.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,13 +22,32 @@ export(tg_mentions_by_period)
 export(tg_post)
 export(tg_post_stat)
 export(tg_posts_search)
+export(tg_set_api_quote_alert_rate)
 export(tg_set_channel_id)
+export(tg_set_interval)
+export(tg_set_max_tries)
 import(cli)
-import(dplyr)
 import(httr2)
 import(retry)
-import(stringr)
-import(tidyr)
-import(utils)
+importFrom(dplyr,across)
+importFrom(dplyr,any_of)
+importFrom(dplyr,as_tibble)
+importFrom(dplyr,filter)
+importFrom(dplyr,left_join)
+importFrom(dplyr,mutate)
+importFrom(dplyr,pull)
+importFrom(dplyr,rename_with)
+importFrom(dplyr,select)
+importFrom(dplyr,tibble)
 importFrom(purrr,map_dfr)
+importFrom(purrr,pwalk)
+importFrom(purrr,walk)
 importFrom(snakecase,to_snake_case)
+importFrom(stringr,str_glue)
+importFrom(stringr,str_replace_all)
+importFrom(tidyr,replace_na)
+importFrom(tidyr,separate)
+importFrom(tidyr,unnest_longer)
+importFrom(tidyr,unnest_wider)
+importFrom(utils,getFromNamespace)
+importFrom(utils,globalVariables)
