--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(tg_get_token)
 export(tg_languages)
 export(tg_mentions_by_channels)
 export(tg_mentions_by_period)
+export(tg_options)
 export(tg_post)
 export(tg_post_stat)
 export(tg_posts_search)
