--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,8 +7,8 @@ Authors@R:
            role   = c("aut", "cre"),
            email  = "selesnow@gmail.com",
            comment = c(ORCID = "0000-0003-0410-7385"))
-Description: Allow function for usint 'TGstat Stat API' and
-    'TGstat Search API', for more deteils see <https://api.tgstat.ru/docs/ru/start/intro.html>.
+Description: Allow function for using 'TGstat Stat API' and
+    'TGstat Search API', for more details see <https://api.tgstat.ru/docs/ru/start/intro.html>.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
