Добавлены функции * `tg_channel_avg_posts_reach()` и `tg_channel_err()`.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,8 @@ export(tg_api_usage)
 export(tg_auth)
 export(tg_categories)
 export(tg_channel)
+export(tg_channel_avg_posts_reach)
+export(tg_channel_err)
 export(tg_channel_forwards)
 export(tg_channel_mentions)
 export(tg_channel_posts)
