--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(tg_post_stat)
 export(tg_posts_search)
 export(tg_set_api_quote_alert_rate)
 export(tg_set_channel_id)
+export(tg_set_check_api_quote)
 export(tg_set_interval)
 export(tg_set_max_tries)
 import(cli)
