--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,8 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
+URL: https://selesnow.github.io/rtgstat
+BugReports: https://github.com/selesnow/rtgstat/issues
 Imports: 
     cli,
     dplyr,
