--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: rtgstat
 Title: Client for 'TGStat API'
-Version: 0.2.0
+Version: 0.2.1
 Authors@R: 
     person(given   = "Alexey",
            family  = "Seleznev",
@@ -15,7 +15,7 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
-URL: https://selesnow.github.io/rtgstat
+URL: https://selesnow.github.io/rtgstat/
 BugReports: https://github.com/selesnow/rtgstat/issues
 Imports: 
     cli,
