добавил функцию поиска обновил сайт переключил версию

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(tg_channel_posts)
 export(tg_channel_stat)
 export(tg_channel_subscribers)
 export(tg_channel_views)
+export(tg_channels_search)
 export(tg_countries)
 export(tg_get_channel_id)
 export(tg_get_token)
